test/types/records/split-init/split-init-type-multiple.chpl
config const setting = false;

proc main() {
  type t;

  if setting {
    t = int;
  } else {
    t = real;
  }
  writeln(t:string);
}
